[package]
name = "ruhackathon"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "main"}
pretty_env_logger = { version = "0.4" }
tokio = { version = "1.5", features = ["full"] }